--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,8 @@ padding: 1vw;
 color: white;
 justify-content: center;
  align-items: center;
+  font-family: 'Indie Flower', cursive;
+ font-size: 2rem;
 }
 
 .button:hover {
